force-app/main/default/objects/CalendarSetting__c/CalendarSetting__c.object-meta.xml
<CustomObject>
    <description>Calendar settings to customize calendars with additional data and timetables</description>
    <label>Configuración de Calendario</label>
    <nameField>
        <label>Calendar Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuraciones de Calendario</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>