force-app/main/default/objects/CalendarSetting__c/fields/CalendarId__c.field-meta.xml
<CustomField>
    <fullName>CalendarId__c</fullName>
    <description>Referenced calendar Id</description>
    <externalId>true</externalId>
    <label>Calendar Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>