force-app/main/default/objects/CalendarSetting__c/fields/EffectiveFrom__c.field-meta.xml
<CustomField>
    <fullName>EffectiveFrom__c</fullName>
    <description>From what time this setting is effective for meeting scheduling</description>
    <label>Effective - From</label>
    <type>Date</type>
</CustomField>