force-app/main/default/objects/CalendarSetting__c/fields/EffectiveTo__c.field-meta.xml
<CustomField>
    <fullName>EffectiveTo__c</fullName>
    <description>To what time this setting is effective for meeting scheduling</description>
    <label>Effective - To</label>
    <type>Date</type>
</CustomField>