force-app/main/default/objects/CalendarSetting__c/fields/HolidayCalendar__c.field-meta.xml
<CustomField>
    <fullName>HolidayCalendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Calendar</label>
    <referenceTo>HolidayCalendar__c</referenceTo>
    <relationshipLabel>Calendar Settings</relationshipLabel>
    <relationshipName>Calendar_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>