force-app/main/default/objects/CalendarSetting__c/fields/Oficina__c.field-meta.xml
<CustomField>
    <fullName>Oficina__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo test para los filtros</description>
    <label>Oficina</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La oficina no pertenece a la provincia indicada</errorMessage>
        <filterItems>
            <field>Account.ShippingState</field>
            <operation>equals</operation>
            <valueField>$Source.Provincia__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calendar Settings</relationshipLabel>
    <relationshipName>CalendarSettings</relationshipName>
    <type>Lookup</type>
</CustomField>