force-app/main/default/objects/CalendarSetting__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>Indicates a user or resource subtype</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asesor</fullName>
            </value>
            <value>
                <fullName>Administrativo</fullName>
            </value>
            <value>
                <fullName>Sala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>