force-app/main/default/objects/CalendarSetting__c/fields/Videollamada__c.field-meta.xml
<CustomField>
    <fullName>Videollamada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Videollamada</label>
    <type>Checkbox</type>
</CustomField>